Fix z-index from positioning

--- a/css/core/components/layout/wrapper.less
+++ b/css/core/components/layout/wrapper.less
@@ -17,7 +17,7 @@ body > .wrapper:last-child {
     .margin-bottom(@wrapper-margin-bottom);
 }
 
-.fixed-top () {
+.fix-wrapper () {
     .fixed + .wrapper {
         .margin-top(@line-height * 4);
     }
