--- a/css/core/components/module/nav.less
+++ b/css/core/components/module/nav.less
@@ -34,7 +34,7 @@
 }
 
 // mixin call for utilities
-.fixed-top-nav () {
+.fix-wrapper-nav () {
     .wrapper > ul {
         .margin-left(-@nav-link-padding-x);
         .margin-right(-@nav-link-padding-x);
