--- a/css/core/components/utilities/position.less
+++ b/css/core/components/utilities/position.less
@@ -4,11 +4,6 @@
     position: relative;
 }
 
-.absolute,
-.fixed {
-    z-index: 1000;
-}
-
 .absolute {
     position: absolute;
 }
@@ -17,7 +12,12 @@
     position: fixed;
 }
 
-.fixed-top();
+.fix-wrapper();
+
+.fixed.top,
+.fixed.bottom {
+    z-index: 1000;
+}
 
 .top {
     top: 0;
