--- a/css/core/mixins/functions/fallback.less
+++ b/css/core/mixins/functions/fallback.less
@@ -67,6 +67,6 @@
 
 // Position
 // ----------------------------------------------------------------------------/
-.fixed-top () {
+.fix-wrapper () {
     // empty
 }
