--- a/css/dark.css
+++ b/css/dark.css
@@ -1603,11 +1603,6 @@ body>.wrapper:last-child {
     position: relative;
 }
 
-.absolute,
-.fixed {
-    z-index: 1000;
-}
-
 .absolute {
     position: absolute;
 }
@@ -1623,6 +1618,11 @@ body>.wrapper:last-child {
 .fixed .wrapper>ul {
     margin-left: -0.75rem;
     margin-right: -0.75rem;
+}
+
+.fixed.top,
+.fixed.bottom {
+    z-index: 1000;
 }
 
 .top {
